[package]
name = "rust_tcp_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "enhanced_client"
path = "enhanced_client.rs"

[[bin]]
name = "send_data_client"
path = "send_data_client.rs"

[[bin]]
name = "stop_test_client"
path = "stop_test_client.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
noise = "0.8"
chrono = { version = "0.4", features = ["serde"] }
bincode = "1.3"
rand = "0.8"
image = "0.24"
colorgrad = "0.6"
